# UniBackpack

./: .gitignore  CMakeLists.txt  README.md
include/: Downloader.hpp  MainWindow.hpp
resources/: resources.qrc
scripts/: build.sh  package.sh
src/: Downloader.cpp  MainWindow.cpp  main.cpp
